--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ table {
 /* Actual style */
 
 .main-container{
+
+    /*min-height: 500px;*/
+    /*min-width: 500px;*/
+
     background-image: url("https://www.101computing.net/enigma/images/metallic-texture.jpg");
 
     border-left: 1vmin solid #DDD;
@@ -107,7 +111,6 @@ table {
 
     height: 50%;
     width: 50%;
-    /*padding-bottom: 40%;*/
 
     border-radius: 100%;
 
@@ -129,11 +132,6 @@ table {
     grid-column: 2;
 
     place-self: center;
-
-    /*display: flex;*/
-
-    /*width: auto;*/
-    /*height: 100%;*/
 
     display: grid;
     grid-template-rows: repeat(3, calc((40vmin - 10vmin)/3));
@@ -189,7 +187,7 @@ table {
 }
 
 body{
-    background-image: radial-gradient(#000, #444);
+    background-image: radial-gradient(#000, #666);
 
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
