--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ table {
 
     display: grid;
     grid-template-rows: 10vmin 10vmin calc(40vmin - 10vmin)  calc(50vmin - 10vmin) 10vmin;
-    grid-template-columns:  1fr 100vmin 1fr;
+    grid-template-columns:  1fr 98vmin 1fr;
 }
 
 .bulbs-container{
@@ -225,5 +225,21 @@ img{
 }
 
 
+
+@media only screen and (max-width: 768px) {
+    .main-container{
+
+        background-image: url("https://www.101computing.net/enigma/images/metallic-texture.jpg");
+
+       border: none;
+
+        width: 100vw;
+        height: 100vh;
+
+        display: grid;
+        grid-template-rows: 10vmin 10vmin calc(40vmin - 10vmin)  calc(50vmin - 10vmin) 10vmin;
+        grid-template-columns:  1fr 98vmin 1fr;
+    }
+}
 
 
